--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,18 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
                              http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
-    <!-- Welcome Page -->
+    <!-- Default landing page -->
     <welcome-file-list>
         <welcome-file>login.jsp</welcome-file>
     </welcome-file-list>
 
-    <!-- Session Timeout -->
-    <session-config>
-        <session-timeout>30</session-timeout>
-    </session-config>
+    <!-- Login -->
+    <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>controller.LoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/LoginServlet</url-pattern>
+    </servlet-mapping>
+
+    <!-- Register -->
+    <servlet>
+        <servlet-name>RegisterServlet</servlet-name>
+        <servlet-class>controller.RegisterServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>RegisterServlet</servlet-name>
+        <url-pattern>/RegisterServlet</url-pattern>
+    </servlet-mapping>
+
+    <!-- Customer Add -->
+    <servlet>
+        <servlet-name>CustomerAddServlet</servlet-name>
+        <servlet-class>controller.CustomerAddServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CustomerAddServlet</servlet-name>
+        <url-pattern>/CustomerAddServlet</url-pattern>
+    </servlet-mapping>
+
+    <!-- Customer Update -->
+    <servlet>
+        <servlet-name>CustomerUpdateServlet</servlet-name>
+        <servlet-class>controller.CustomerUpdateServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CustomerUpdateServlet</servlet-name>
+        <url-pattern>/CustomerUpdateServlet</url-pattern>
+    </servlet-mapping>
+
+    <!-- Customer Delete -->
+    <servlet>
+        <servlet-name>CustomerDeleteServlet</servlet-name>
+        <servlet-class>controller.CustomerDeleteServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CustomerDeleteServlet</servlet-name>
+        <url-pattern>/CustomerDeleteServlet</url-pattern>
+    </servlet-mapping>
+
+    <!-- Item Add -->
+    <servlet>
+        <servlet-name>ItemAddServlet</servlet-name>
+        <servlet-class>controller.ItemAddServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ItemAddServlet</servlet-name>
+        <url-pattern>/ItemAddServlet</url-pattern>
+    </servlet-mapping>
+
+    <!-- Item Update -->
+    <servlet>
+        <servlet-name>ItemUpdateServlet</servlet-name>
+        <servlet-class>controller.ItemUpdateServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ItemUpdateServlet</servlet-name>
+        <url-pattern>/ItemUpdateServlet</url-pattern>
+    </servlet-mapping>
+
+    <!-- Item Delete -->
+    <servlet>
+        <servlet-name>ItemDeleteServlet</servlet-name>
+        <servlet-class>controller.ItemDeleteServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ItemDeleteServlet</servlet-name>
+        <url-pattern>/ItemDeleteServlet</url-pattern>
+    </servlet-mapping>
+
+    <!-- Bill -->
+    <servlet>
+        <servlet-name>BillServlet</servlet-name>
+        <servlet-class>controller.BillServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>BillServlet</servlet-name>
+        <url-pattern>/BillServlet</url-pattern>
+    </servlet-mapping>
 
 </web-app>
